--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
 			<version>3.0.2.Final</version>
 		</dependency>
 
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.16.14</version>
+		<scope>provided</scope>
+	</dependency> 
+		
+
 		
 	</dependencies>
 
